--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Vertical menu with gooey effect on hover Example </title>
+      <title> Restaurant API </title>
       <!-- Style CSS -->
       <link rel="stylesheet" href="./css/style.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
